Fix Gorgeous header

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             
             <div class="card-content">
-                <h1>Hello <span class="special-text gorgeous">gorgeous</span>...</h1>
+                <h1>Hello <span class="special-text gorgeous">Gorgeous</span>...</h1>
                 <div class="sakura-divider"></div>
                 <p class="question">Will you go on a date with me?</p>
                 <div class="buttons">
